CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

26 November 2007
+ Changed numbers of dateSelect values to double digit format.
+ Form Generator convert was not reindexing the new form tables.

16 November 2007
+ Database
  o AddWhere needed a little fix for the source column to use table as.
  o Added '~' and 'RLIKE' to allowed operators.
  o mysql and psql sub classes now handle regular expression calls
    properly.
+ DBPager
  o Can now search columns on joined tables entered with joinResult.


15 November 2007
+ Added ability to reference table names.
+ DBPager can now order by joined columns.
+ Removed construct by reference calls in Key.
+ Updated Database_Class.txt with table reference information.

9 November 2007
+ Added sanity check to scaleImage. If width and height of image is
  less than the resize only copy if the source and destination
  directories are different.

7 November 2007
+ Fixed makeThumbnail function. Works as intended again.
+ Added testDate function to Form
+ Added match settings to dateSelect function.
+ Updated Forms documentation with dateSelect information.
+ Fixed bad css in default theme.

5 November 2007
+ Added getPostedDate. Returns unix time from last posted dateSelect.

1 November 2007
+ Added new function, dateSelect. Works sort of like the old dateForm.
+ Changed incorrect detail in Demographics document.

30 October 2007
+ Fixed: Form wasn't properly creating id tags on array elements.
+ DBPager: initialize function now has optional parameter that delays
           the row loading.
+ DBPager: Error prevention added to getPageRows function.
+ Mail: added HTML email capabilities.


29 October 2007
+ Moved permissions updates from save to savePermissions function. Key
  was removing permissions after each successful save.

25 October 2007
+ Added default 'No label' to open_window if one is not entered.